--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html>
 
-<script type="module" src="main.js"></script>
+<html lang="en">
+    <head>
+        <title>Rust Demo</title>
+        <script type="module" src="main.js"></script>
+    </head>
+    <body>
+        <canvas id="main"></canvas>
+    </body>
+</html>
