Rename page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <title>Rust Demo</title>
+        <title>Stars.rs</title>
         <script type="module" src="main.js"></script>
     </head>
     <body>
